tests/errors/named_on_builtin_fn.vt
fn main() { print(msg: "hi"); }
